--- a/website/core/templates/core/category.html
+++ b/website/core/templates/core/category.html
@@ -9,11 +9,10 @@
 {% block content %}
 <h1>{{ category.name }}</h1>
 {% if picture_list %}
-<ul>
-    {% for picture in picture_list %}
-    <li>{{ picture.title }}</li>
-    {% endfor %}
-</ul>
+{% for picture in picture_list %}
+<h2>{{ picture.title }}</h2>
+<img src="{{ picture.image.url }}" alt="{{ picture.title }}">
+{% endfor %}
 {% else %}
 <p>No pictures are presented.</p>
 {% endif %}
