Add highlight to chosen page in navbar

--- a/website/core/templates/core/about.html
+++ b/website/core/templates/core/about.html
@@ -6,6 +6,9 @@
 {% include 'core/menu_generator.html' %}
 {% endblock %}
 
-{% block content %}
+{% block nav_about %}
+<li class="nav-item active">
+{% endblock %}
 
+{% block content %}
 {% endblock %}
