--- a/website/core/templates/core/contacts.html
+++ b/website/core/templates/core/contacts.html
@@ -6,6 +6,10 @@
 {% include 'core/menu_generator.html' %}
 {% endblock %}
 
+{% block nav_contacts %}
+<li class="nav-item active">
+{% endblock %}
+
 {% block content %}
 
 {% endblock %}
