--- a/website/core/templates/core/layout.html
+++ b/website/core/templates/core/layout.html
@@ -29,15 +29,21 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            {% block nav_home %}
+            <li class="nav-item">
+            {% endblock %}
                 <a class="nav-link" href="{% url 'core:index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             {% block category_menu %}
             {% endblock %}
+            {% block nav_about %}
             <li class="nav-item">
+            {% endblock %}
                 <a class="nav-link" href="{% url 'core:about' %}">About</a>
             </li>
+            {% block nav_contacts %}
             <li class="nav-item">
+            {% endblock %}
                 <a class="nav-link" href="{% url 'core:contacts' %}">Contacts</a>
             </li>
         </ul>
