--- a/website/core/static/core/css/main.css
+++ b/website/core/static/core/css/main.css
@@ -1,4 +1,24 @@
-img.size-category{
+img.size-category {
      width: auto;
-     max-height: 800px;
+     max-height: 80vh;
+}
+
+img.screen-fitted{
+    max-height: 100vh;
+    max-width: 100vw;
+}
+
+.slider-full-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    min-height: 80vh;
+    min-width: 90vw;
+}
+
+/* Make the modal be transparent */
+#myModal .modal-content {
+  background-color:rgba(0, 0, 0, 0.8);
+  border: 0;
 }
