--- a/website/core/static/core/css/main.css
+++ b/website/core/static/core/css/main.css
@@ -19,6 +19,10 @@ img.screen-fitted{
 
 /* Make the modal be transparent */
 #myModal .modal-content {
-  background-color:rgba(0, 0, 0, 0.8);
-  border: 0;
+    background-color:rgba(0, 0, 0, 0.8);
+    border: 0;
+}
+
+.nav-link{
+    font-size:1.3em;
 }
