--- a/website/core/templates/core/about.html
+++ b/website/core/templates/core/about.html
@@ -11,4 +11,8 @@
 {% endblock %}
 
 {% block content %}
+   {{text_about|safe}}
+    {% for social in social_list %}
+    <a href="{{social.link}}"><i class="fab fa-{{social.name}} fa-2x" style="color: grey;"></i></a>
+    {% endfor %}
 {% endblock %}
