Show photo on about page

--- a/website/core/templates/core/about.html
+++ b/website/core/templates/core/about.html
@@ -11,8 +11,11 @@
 {% endblock %}
 
 {% block content %}
-   {{text_about|safe}}
+    <div class="row">
+    <div class="col-4"><img src="{{ photo.url }}" class="img-fluid"></div>
+   <div class="col-8">{{text_about|safe}}
     {% for social in social_list %}
-    <a href="{{social.link}}"><i class="fab fa-{{social.name}} fa-2x" style="color: grey;"></i></a>
-    {% endfor %}
+    <a href="{{social.link}}"><i class="ri-{{social.name}}-line ri-2x" style="color: grey;"></i></a>
+    {% endfor %}</div>
+        </div>
 {% endblock %}
