--- a/website/core/static/core/css/main.css
+++ b/website/core/static/core/css/main.css
@@ -26,3 +26,9 @@ img.screen-fitted{
 .nav-link{
     font-size:1.3em;
 }
+
+a:link, a:visited, a:hover, a:active {
+  color: black;
+  text-decoration: none;
+
+}
