--- a/website/core/templates/core/layout.html
+++ b/website/core/templates/core/layout.html
@@ -32,12 +32,13 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 <div class="col-sm-0 col-md-2"></div>
+        <a class="navbar-brand" href="{% url 'core:index' %}"><img src="{% static 'core/img/logo_navbar.png' %}" height="32px" width="auto"></a>
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             {% block nav_home %}
             <li class="nav-item">
                 {% endblock %}
-                <a class="nav-link" href="{% url 'core:index' %}"><i class="ri-home-7-fill ri-lg"></i> <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'core:index' %}">Home</a>
             </li>
             {% block category_menu %}
             {% endblock %}
@@ -54,7 +55,7 @@
     <div class="row">
         <div class=" col-sm-0 col-md-2">
         </div>
-        <div class=" col-sm-12 col-md-8">
+        <div class=" col-sm-12 col-md-8 px-0">
             {% block content %}
             {% endblock %}
         </div>
