--- a/website/core/templates/core/layout.html
+++ b/website/core/templates/core/layout.html
@@ -31,8 +31,9 @@
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-<div class="col-sm-0 col-md-2"></div>
-        <a class="navbar-brand" href="{% url 'core:index' %}"><img src="{% static 'core/img/logo_navbar.png' %}" height="32px" width="auto"></a>
+    <div class="col-sm-0 col-md-2"></div>
+    <a class="navbar-brand" href="{% url 'core:index' %}"><img src="{% static 'core/img/logo_navbar.png' %}"
+                                                               height="32px" width="auto"></a>
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             {% block nav_home %}
@@ -49,7 +50,7 @@
             </li>
         </ul>
     </div>
-<div class="col-sm-0 col-md-2"></div>
+    <div class="col-sm-0 col-md-2"></div>
 </nav>
 <div class="container-fluid">
     <div class="row">
